<resources>


    <string name="app_name">Music Free</string>

    <string name="query_fault" translatable="true">Please Enter song or singer for search</string>

    <string name="facebook_app_id" translatable="false">1166762463497192</string>
    <string name="facebook_banner" translatable="false">1166762463497192_1446059532234149</string>
    <string name="facebook_Intersitial" translatable="false">1166762463497192_1494825124024256</string>


    <string name="rate">Rate Us ! </string>
    <string name="rate_1">If you like this app, Please Rate Us. We care about your comments.It wont take more than 1 min.Thanks for your support !</string>
    <string name="rate_pos">RATE APP NOW !!!</string>
    <string name="rate_neg">Close App</string>
    <string name="rate_neutral">Cancel</string>


    <string name="crate">ERROR !</string>
    <string name="crate_pos">Go to New App</string>
    <string name="crate_neg">Cancel</string>



    <string name="search_hint">Enter song or singer for search</string>
    <string name="search">Search</string>
    <string name="play_song">Play</string>

    <string name="ratee">Rate Us</string>
    <string name="sharee">Share with Friend</string>
    <string name="downloads">Downloads</string>
    <string name="downloading_not">Media is downloading...</string>

    <string name="turk">Turkish Popular</string>
    <string name="yabanci">World Popular</string>
    <string name="yeni">New Musics</string>


    <string name="nothing_found">Nothing found ! </string>
    <string name="error1"> Error ! Please try again later .</string>
    <string name="internet_error"> Please Check your internet connection. </string>

    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="error_no_metadata">Unable to retrieve metadata.</string>
    <string name="browse_genres">Genres</string>
    <string name="browse_genre_subtitle">Songs by genre</string>
    <string name="browse_musics_by_genre_subtitle">%1$s songs</string>
    <string name="random_queue_title">Random music</string>
    <string name="error_no_connection">Cannot connect to server. Please, check your Internet connectivity.</string>
    <string name="error_loading_media">Error Loading Media</string>
    <string name="casting_to_device">Casting to %1$s</string>
    <string name="currently_playing_song">Desperado</string>
    <string name="currently_playing_artist">藤田惠美</string>
    <string name="currently_playing_extra_info">Extra info for currently playing song</string>
    <string name="play_item">Play item</string>
    <string name="play_pause">play or pause</string>
    <string name="skip_next">skip to next</string>
    <string name="skip_prev">skip to previous</string>
    <!-- Use the default receiver. To customize a styled media receiver, you can use
         the css and images under <project-root>/docs/cast_styled_receiver -->
    <string name="cast_application_id">CC1AD845</string>
    <string name="home_title">Home</string>
    <string name="related_content_header">You may also like</string>
    <string name="action_listen">Listen</string>
    <string name="open_content_drawer">Open the main menu</string>
    <string name="close_content_drawer">Close the main menu</string>
    <string name="placeholder_message">This is a placeholder for your application code.</string>
    <string name="drawer_allmusic_title">All Music</string>
    <string name="drawer_playlists_title">Playlists</string>
    <string name="now_playing">Now Playing</string>
    <string name="background_image_str">Background image for album art</string>
    <string name="search_queue_title">Search results</string>
    <string name="no_search_results">No search results.</string>
    <string name="loading">Loading…</string>
    <string name="media_route_menu_title">Play on…</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="MusicName">Desperado</string>

    <string name="music_notification_title_template">Music: %1$s</string>
    <string name="_00_00">00:00</string>

    <string name="cd_repeat">Repeat one or all</string>
    <string name="cd_previous">Skip backwards</string>
    <string name="cd_play">Play and pause</string>
    <string name="cd_next">Skip forwards</string>

</resources>
