<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="70dp">



    <ImageView
        android:id="@+id/music_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="false"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/media_item_icon_margin_start"
        android:contentDescription="@string/play_item"
        android:src="@drawable/ic_music_note_24dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/media_item_text_margin_start"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/music_singer"
            tools:text="@string/currently_playing_song"
            android:layout_width="fill_parent"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:ellipsize="end"
            />

        <TextView
            android:id="@+id/music_title"
            android:visibility="gone"
            tools:text="@string/currently_playing_artist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorSecondary"/>

    </LinearLayout>

</RelativeLayout>